--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Writing a great story for data science projects - spring 2025"
+title: "Missing data and imputation"
 subtitle: "This is a Report Template Quarto"
-author: "Students names (Advisor: Dr. Cohen)"
+author: "Tharun Teja Gandham (Advisor: Dr. Cohen)"
 date: '`r Sys.Date()`'
 format:
   html:
@@ -21,14 +21,7 @@ editor:
 Slides: [slides.html](slides.html){target="_blank"} ( Go to `slides.qmd`
 to edit)
 
-::: callout-important
-**Remember:** Your goal is to make your audience understand and care
-about your findings. By crafting a compelling story, you can effectively
-communicate the value of your data science project.
 
-Carefully read this template since it has instructions and tips to
-writing!
-:::
 
 ## Introduction
 
