--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@article{salgado2016missing,
+  title={Missing data},
+  author={Salgado, C{\'a}tia M and Azevedo, Carlos and Proen{\c{c}}a, Hugo and Vieira, Susana M},
+  journal={Secondary analysis of electronic health records},
+  pages={143--162},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{pedersen2017missing,
+  title={Missing data and multiple imputation in clinical epidemiological research},
+  author={Pedersen, Alma B and Mikkelsen, Ellen M and Cronin-Fenton, Deirdre and Kristensen, Nickolaj R and Pham, Tra My and Pedersen, Lars and Petersen, Irene},
+  journal={Clinical epidemiology},
+  pages={157--166},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
 @article{adams2021topology,
   title={Topology applied to machine learning: From global to local},
   author={Adams, Henry and Moy, Michael},
