--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,27 @@
   publisher={Taylor \& Francis}
 }
 
+@article{alwateer2024missing,
+  title={Missing Data Imputation: A Comprehensive Review},
+  author={Alwateer, Majed and Atlam, El-Sayed and Abd El-Raouf, Mahmoud Mohammed and Ghoneim, Osama A and Gad, Ibrahim},
+  journal={Journal of Computer and Communications},
+  volume={12},
+  number={11},
+  pages={53--75},
+  year={2024},
+  publisher={Scientific Research Publishing}
+}
+@article{afkanpour2024identify,
+  title={Identify the most appropriate imputation method for handling missing values in clinical structured datasets: a systematic review},
+  author={Afkanpour, Marziyeh and Hosseinzadeh, Elham and Tabesh, Hamed},
+  journal={BMC Medical Research Methodology},
+  volume={24},
+  number={1},
+  pages={188},
+  year={2024},
+  publisher={Springer}
+} 
+
 @article{adams2021topology,
   title={Topology applied to machine learning: From global to local},
   author={Adams, Henry and Moy, Michael},
