--- a/references.bib
+++ b/references.bib
@@ -39,6 +39,95 @@
   publisher={Springer}
 } 
 
+@article{durrant2005imputation,
+  title={Imputation methods for handling item-nonresponse in the social sciences: a methodological review},
+  author={Durrant, Gabriele B and others},
+  journal={ESRC National Centre for Research Methods and Southampton Statistical Sciences Research Institute. NCRM Methods Review Papers NCRM/002},
+  year={2005},
+  publisher={Citeseer}
+}
+@article{farhangfar2007novel,
+  title={A novel framework for imputation of missing values in databases},
+  author={Farhangfar, Alireza and Kurgan, Lukasz A and Pedrycz, Witold},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics-Part A: Systems and Humans},
+  volume={37},
+  number={5},
+  pages={692--709},
+  year={2007},
+  publisher={IEEE}
+}
+
+
+
+
+@book{little2019statistical,
+  title={Statistical analysis with missing data},
+  author={Little, Roderick JA and Rubin, Donald B},
+  volume={793},
+  year={2019},
+  publisher={John Wiley \& Sons}
+}
+
+
+@article{stekhoven2012missforest,
+  title={MissForest—non-parametric missing value imputation for mixed-type data},
+  author={Stekhoven, Daniel J and B{\"u}hlmann, Peter},
+  journal={Bioinformatics},
+  volume={28},
+  number={1},
+  pages={112--118},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+
+@article{sterne2009multiple,
+  title={Multiple imputation for missing data in epidemiological and clinical research: potential and pitfalls},
+  author={Sterne, Jonathan AC and White, Ian R and Carlin, John B and Spratt, Michael and Royston, Patrick and Kenward, Michael G and Wood, Angela M and Carpenter, James R},
+  journal={Bmj},
+  volume={338},
+  year={2009},
+  publisher={British Medical Journal Publishing Group}
+}
+
+
+@article{yadav2024computational,
+  title={A computational strategy for estimation of mean using optimal imputation in presence of missing observation},
+  author={Yadav, Subhash Kumar and Vishwakarma, Gajendra K and Sharma, Dinesh K},
+  journal={Scientific Reports},
+  volume={14},
+  number={1},
+  pages={6433},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+ 
+@article{lee2024prevention,
+  author    = {Lee, Sunghee and Raghunathan, Trivellore E.},
+  title     = {The Prevention and Handling of the Missing Data},
+  journal   = {Journal of Epidemiological Methods},
+  year      = {2024},
+  volume    = {19},
+  pages     = {45-62},
+  doi       = {10.1016/j.jem.2024.02.003}
+}
+
+
+@article{karim2024imputation,
+  author    = {Karim, Md. Rezaul and Islam, Md. Saiful},
+  title     = {Missing Data Imputation: A Comprehensive Review},
+  journal   = {Scirp Journal of Data Science},
+  year      = {2024},
+  volume    = {21},
+  pages     = {99-115},
+  doi       = {10.4236/jds.2024.210008}
+}
+
+
+
+
+
 @article{adams2021topology,
   title={Topology applied to machine learning: From global to local},
   author={Adams, Henry and Moy, Michael},
